--- a/css/default.css
+++ b/css/default.css
@@ -204,7 +204,7 @@ footer {
     padding: 8px;
     text-align: center;
     color: #ffffff;
-    font-family: 'ヒラギノ角ゴ Pro W3', 'Noto Sans CJK JP', 'Noto Sans JP', sans-serif;
+    font-family: 'ヒラギノ角ゴ Pro W3', 'Noto Sans CJK JP', 'ＭＳ ゴシック', 'Noto Sans JP', sans-serif;
 }
 
 /* ┌────────────┐
