Fixed NSFW id's

--- a/css/bizyutukan.css
+++ b/css/bizyutukan.css
@@ -8,6 +8,66 @@
  */
 
 /* NSFW :3 */
-div#nsfw {
+div#nsfw0 {
+    display: none;
+}
+
+div#nsfw1 {
+    display: none;
+}
+
+div#nsfw2 {
+    display: none;
+}
+
+div#nsfw3 {
+    display: none;
+}
+
+div#nsfw4 {
+    display: none;
+}
+
+div#nsfw5 {
+    display: none;
+}
+
+div#nsfw6 {
+    display: none;
+}
+
+div#nsfw7 {
+    display: none;
+}
+
+div#nsfw8 {
+    display: none;
+}
+
+div#nsfw9 {
+    display: none;
+}
+
+div#nsfw10 {
+    display: none;
+}
+
+div#nsfw11 {
+    display: none;
+}
+
+div#nsfw12 {
+    display: none;
+}
+
+div#nsfw13 {
+    display: none;
+}
+
+div#nsfw14 {
+    display: none;
+}
+
+div#nsfw15 {
     display: none;
 }
