Fixed the comments to be better at, well, commenting :)

--- a/css/bizyutukan.css
+++ b/css/bizyutukan.css
@@ -1,10 +1,12 @@
-/* ＃＃＃＃＃＃＃＃＃＃
- * ＃ bizyutukan.css ＃
- * ＃＃＃＃＃＃＃＃＃＃
- *
- * This just exists to set the default state of the togglable
- * <div> elements to "none".
- *
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+ * bizyutukan.css "美術館"
+ * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+ * 
+ * 制作者：虹川郷鬼
+ * 
+ * This just exists to set the default state of the togglable <div> elements to 
+ * "none".
+ * 
  */
 
 /* NSFW :3 */
