--- a/css/nizi.css
+++ b/css/nizi.css
@@ -1,10 +1,12 @@
-/* ＃＃＃＃＃＃＃＃
- * ＃ nizi.css   ＃
- * ＃＃＃＃＃＃＃＃
- *
- * This just exists to set the default state of the togglable
- * <div> elements to "none".
- *
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+ * nizi.css ""
+ * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+ * 
+ * 制作者：虹川郷鬼
+ * 
+ * This just exists to set the default state of the togglable <div> elements to 
+ * "none".
+ * 
  */
 
 /* Our System */
