--- a/css/monster.css
+++ b/css/monster.css
@@ -9,47 +9,67 @@
  * 
  */
 
-/*  */
-div# {
+/* コウモリ */
+div#bat {
     display: none;
 }
 
-/*  */
-div# {
+/* スライム */
+div#slime {
     display: none;
 }
 
-/*  */
-div# {
+/* 氷スライム */
+div#IceSlime {
     display: none;
 }
 
-/*  */
-div# {
+/* 溶岩スライム */
+div#LavaSlime {
     display: none;
 }
 
-/*  */
-div# {
+/* オーク */
+div#orc {
     display: none;
 }
 
-/*  */
-div# {
+/* 地霊 */
+div#EarthSpirit {
     display: none;
 }
 
-/*  */
-div# {
+/* 火霊 */
+div#FireSpirit {
     display: none;
 }
 
-/*  */
-div# {
+/* 水霊 */
+div#WaterSpirit {
     display: none;
 }
 
-/*  */
-div# {
+/* 風霊 */
+div#WindSpirit {
+    display: none;
+}
+
+/* コカトリス */
+div#cockatrice {
+    display: none;
+}
+
+/* 妖精 */
+div#fairy {
+    display: none;
+}
+
+/* 氷妖精 */
+div#FrostFairy {
+    display: none;
+}
+
+/* 羅刹 */
+div#rakshasa {
     display: none;
 }
