Expanded the range of <div> elements hidden by default

--- a/css/bizyutukan.css
+++ b/css/bizyutukan.css
@@ -73,3 +73,67 @@ div#nsfw14 {
 div#nsfw15 {
     display: none;
 }
+
+div#nsfw16 {
+    display: none;
+}
+
+div#nsfw17 {
+    display: none;
+}
+
+div#nsfw18 {
+    display: none;
+}
+
+div#nsfw19 {
+    display: none;
+}
+
+div#nsfw20 {
+    display: none;
+}
+
+div#nsfw21 {
+    display: none;
+}
+
+div#nsfw22 {
+    display: none;
+}
+
+div#nsfw23 {
+    display: none;
+}
+
+div#nsfw24 {
+    display: none;
+}
+
+div#nsfw25 {
+    display: none;
+}
+
+div#nsfw26 {
+    display: none;
+}
+
+div#nsfw27 {
+    display: none;
+}
+
+div#nsfw28 {
+    display: none;
+}
+
+div#nsfw29 {
+    display: none;
+}
+
+div#nsfw30 {
+    display: none;
+}
+
+div#nsfw31 {
+    display: none;
+}
