Prepared the css and js files for usage in JavaScript

--- a/css/kableustein.css
+++ b/css/kableustein.css
@@ -9,4 +9,140 @@
  * 
  */
 
+/* キャブロイシュタイン町 */
 
+/* ヴィクトル・ボデンシュタイン */
+
+/* ジークリンデ・アイベンシューツ */
+
+/* ヴォルクハルト・ゴルヴィツァー */
+
+/* ヴィクトーリア・ギュールデンステイト */
+
+/* レオポルド・ヴォンヘルゲンレーザー */
+
+/* オスカー・ケイストナー */
+
+/* セラー・キルシュヴェガー */
+
+/* イリス・クロステルマン */
+
+/* 天里愛・キュールシュマン */
+
+/* イルゼ・キュールシュマン */
+
+/* アルフリッド・メンゲルベルク */
+
+/* キャスパー・メーリング */
+
+/* テレサ・ノイホイッサー */
+
+/* リリ・ローゼンベルガー */
+
+/* シグムンド・シェーンベルガー */
+
+/* ロズヴィザー・ジンメル */
+
+/* ヴィルヘルム・シュパイッス */
+
+/* ルドヴィグ・ヴォンヴァインベルガー */
+
+/* カイ・ヴェーラー */
+
+/* セラフィナ・ヴォルフェンソーン・メルゲンタラー */
+
+/* ------------------------------------------------------------------------- */
+
+/* ステーンシンゲン市 */
+
+/* ------------------------------------------------------------------------- */
+
+/* ツヴィンゲンローダ町 */
+
+/* エレノル・ベークマン */
+
+/* レオンハルト・ヘーフレ */
+
+/* クリストフ・ハンフシュテイングル */
+
+/* エベリン・ヘイリング */
+
+/* ルツィア・クレチュメル */
+
+/* ルウシー・オホス */
+
+/* ピート・プロホノフ */
+
+/* ジナ・ロゼンクランツ */
+
+/* エドゥアルド・シット */
+
+/* ヨハン・タイヒミュラ */
+
+/* ------------------------------------------------------------------------- */
+
+/* グロッスヴェルテル町 */
+
+/* ブリッタ・ベイル */
+
+/* フェリツィタス・グリュック */
+
+/* アン・ハウフェ */
+
+/* ゲオルグ・ヘーニグマン */
+
+/* イル・ホプフ */
+
+/* フィンヤ・リュティ */
+
+/* ベネディクト・フォンペーペル */
+
+/* スフェン・シェルシャイト */
+
+/* レフィ・フォンシュッツ */
+
+/* ヨアヒム・シュヴァイニツ */
+
+/* ------------------------------------------------------------------------- */
+
+/* アッピンゲスホテン町 */
+
+/* ------------------------------------------------------------------------- */
+
+/* ニーデルンレイシェン村 */
+
+/* マドレン・ボイムレル */
+
+/* アロイス・ブリュヘル */
+
+/* フィッシュ・ファックス */
+
+/* ファルコ・ゲールデル */
+
+/* ヴィーブケ・ケーレル＝ケーネ */
+
+/* リケ・ニチュ */
+
+/* ビェールン・プライッス */
+
+/* イェールグ・シュヴァルツェンベルゲル */
+
+/* ティム・ヴェルゼル */
+
+/* ティア・ヴィッスマン */
+
+/* ------------------------------------------------------------------------- */
+
+/* アムステルリヘム＝ミッデルヴェーン町 */
+
+/* ------------------------------------------------------------------------- */
+
+/* ダシュガプ町 */
+
+/* ------------------------------------------------------------------------- */
+
+/* テュルケナバト町 */
+
+/* ------------------------------------------------------------------------- */
+
+/* サイゾブ町 */
