Fixed the header comment

--- a/css/kableustein.css
+++ b/css/kableustein.css
@@ -1,6 +1,6 @@
-/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+/* ============================================================================
  * kableustein.css "キャブロイシュタイン王国"
- * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+ * ============================================================================
  * 
  * 制作者：虹川郷鬼
  * 
