--- a/css/pride.css
+++ b/css/pride.css
@@ -5,3 +5,21 @@
  * 制作者：虹川郷鬼
  * 
  */
+
+/* Shows the pride flag to right hand side of the screen */
+.pride-display {
+    float: right;
+    box-sizing: border-box;
+}
+
+/* Shows the pride colours to the left-hand side of the screen */
+.pride-color {
+    float: left;
+    box-sizing: border-box;
+}
+
+/* Places some padding between the text and the divs :) */
+.p-space {
+    text-align: center;
+    padding: 8px;
+}
